:recycle: refactor: 불필요한 ChatRoom Optional 사용 삭제